--- a/index.html
+++ b/index.html
@@ -405,6 +405,8 @@ Error message and password prompt
 
 <li>מיזונפלציה</li>
 
+<li>מיצפרש</li>
+
 <li>מלפפונים חמוצים</li>
 
 <li>מנקים היטב</li>
@@ -8363,7 +8365,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="מיצפרש [[מצפה ראשית]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8383,7 +8385,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170501203233382" title="$:/temp/search">
+<div created="20161023184814872" modified="20170502194517295" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9008,10 +9010,12 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161024180611154" modified="20170401170557088" tags="" title="געזונטהייטס">
+<div created="20161024180611154" modified="20170502191030397" tags="" title="געזונטהייטס">
 <pre>[img[pictures/JOI7qxUSCqd04xay.jpg]]
 
-בניין, הנמצא בעיר נמל על ים טתיס. הבניין נמצא סמוך לנמל בעיר התחתית. הוא בן שש קומות ושייך ל[[שלום]].
+!!![[גורה]]:
+
+בניין, הנמצא [[במצפה ראשית]], שעל ים טתיס. הבניין נמצא באזור התעשייה של העיר התחתית. הוא בן שש קומות ושייך ל[[שלום]].
 בקומה 4 נמצא [[ההוסטל]], בו לנים עוברי אורח בעיר.
 בקומה שלוש ישנם שלושה משרדים.
 בקומה שתיים [[מערכת עיתון אזוטרי|מערכת העיתון]].
@@ -9385,14 +9389,14 @@ Error message and password prompt
 
 זואי. המטפלת השמחה-עצובה. ראש קופירייטרי, טיפולית, דואגת לכל, יכולה להתגייס לתחמנויות, יכולת משחק, מסאז'יסטית, לוק תמים, חרוצה, מתכננת.</pre>
 </div>
-<div created="20161113192814802" modified="20170425194141203" title="המעבדה">
+<div created="20161113192814802" modified="20170502091126890" title="המעבדה">
 <pre>[img[pictures/hamaabada.jpg]]
 
 !!![[כאן היינו]]
 
 !!![[גורה]]:
 
-[[כשהיינו כאן|בחוות החיות]], הדשא שלפני הבית היה גדול' והגיע עד לירידה לנחל. בסתיו ובחורף הוא היה  משופע פרחים. נרקיסים, רקפות, כלניות.
+[[כשהיינו כאן|בחוות החיות]], הדשא שלפני הבית היה גדול, והגיע עד לירידה לנחל. בסתיו ובחורף הוא היה  משופע פרחים. נרקיסים, רקפות, כלניות.
 
 למעשה יויו התגורר כאן, בתקופה שהתחבר [[למקלדת|מקלדת]] והפך לאווה כהן, ואני הייתי על תקן האחות, שמבקרת לעתים תכופות.
 
@@ -9456,7 +9460,7 @@ loving you</pre>
 
 </pre>
 </div>
-<div created="20161112205825183" modified="20170324124100331" title="הסינים">
+<div created="20161112205825183" modified="20170502194316142" title="הסינים">
 <pre>[img[pictures/S0BooiQwhm4gYLFk.JPG]]
 
 !!![[גורה]]:
@@ -9465,11 +9469,11 @@ loving you</pre>
 
 חמישה גברים בתחילת שנות השלושים לחייהם. חמישתם נולדו למשפחות מהגרים שהגיעו לפריז כקבוצה בשנות השלושים של המאה ה-20.
 
-הם (חמישתם), גדלו יחדיו, למדו יחדיו מהגן ועד סוף התיכון, חגגו יחדיו את כל החגים כולל את כריסמס האחרון.
+הם (חמישתם), גדלו יחדיו, למדו יחדיו מהגן ועד סוף התיכון, חגגו יחדיו את כל החגים כולל את [[כריסמס האחרון|ארוחת כריסמס]].
 
-את מלאכות הבנייה למדו מאבותיהם, וכך הפכו הם  לחבורת שיפוצניקים לעילא, שהגיעה אלינו דרך ז'נבייב, דרכה הגענו [[לדירה|הדירה]].
+את מלאכות הבנייה למדו מאבותיהם, וכך הפכו הם,  לחבורת שיפוצניקים לעילא, שהגיעה אלינו דרך ז'נבייב, דרכה הגענו [[לדירה|הדירה]].
 
-קואנג היה הראשון אליו נקשרתי, הוא זה שהסתובב איתי בתקופת הרכישות.
+[[קואנג]] היה הראשון אליו נקשרתי, הוא זה שהסתובב איתי בתקופת הרכישות.
 
 המשך יבוא.</pre>
 </div>
@@ -10760,6 +10764,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
+<div created="20170502201030702" modified="20170502214740741" title="מיצפרש">
+<pre>[img[pictures/mizperesh.jpg]]
+
+!!![[יויו]]:
+
+מיצפרש, שייך למשה הולמס, שהגיע [[למצפה|מצפה ראשית]], לאחר שיצא  לגמלאות משרות המדינה, והוא בן 48.
+
+הוא התחיל מבוטקה על דונם שקנה באזור שפך האסדה, ותוך שנה זה הפך למפעל קטן ומצליח.
+
+</pre>
+</div>
 <div created="20170409072116141" modified="20170412203328914" tags="[[מתכוני ארוחת הכריסמס]]" title="מלפפונים חמוצים">
 <pre>[img[pictures/melafefonim-chamuzim.jpg]]
 
@@ -10830,12 +10845,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 באין מפעיל יד אפשר להעזר [[בגלי קול|https://www.youtube.com/watch?v=JEq10L7u3SM]].</pre>
 </div>
-<div created="20170501184958435" modified="20170501203101744" title="מצפה ראשית">
+<div created="20170501184958435" modified="20170502200234426" title="מצפה ראשית">
 <pre>[img[pictures/mizpe-reshit.jpg]]
 
 !!![[גורה]]:
 
-מצפה ראשית הוא הישוב, [[שאסדת טתיס|ים טתיס]]  הייתה רק תרוץ להקמתו המתבקשת. בצידה המזרחי נמצא [[רובע מרינה|מרינה זוטו]], שהמשכו הוא אזור תעשיה, בו שוכן, בין השאר, הבניין של [[שלום]].</pre>
+מצפה ראשית, או בקיצור, [[מיצפרש]] הוא הישוב, [[שאסדת טתיס|ים טתיס]]  הייתה רק תרוץ להקמתו המתבקשת. בצידה המזרחי נמצא [[רובע מרינה|מרינה זוטו]], שהמשכו הוא אזור תעשיה, בו שוכן, בין השאר, הבניין של [[שלום]].</pre>
 </div>
 <div created="20170223175057546" modified="20170417151442577" title="מקלדת">
 <pre>[img[pictures/mikledet.jpg]]
