--- a/index.html
+++ b/index.html
@@ -8365,7 +8365,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="מיצפרש [[מצפה ראשית]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="שלום [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8385,8 +8385,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170502194517295" title="$:/temp/search">
-<pre></pre>
+<div created="20161023184814872" modified="20170503210219288" title="$:/temp/search">
+<pre>שלום</pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -10845,12 +10845,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 באין מפעיל יד אפשר להעזר [[בגלי קול|https://www.youtube.com/watch?v=JEq10L7u3SM]].</pre>
 </div>
-<div created="20170501184958435" modified="20170502200234426" title="מצפה ראשית">
+<div created="20170501184958435" modified="20170503194844834" title="מצפה ראשית">
 <pre>[img[pictures/mizpe-reshit.jpg]]
 
 !!![[גורה]]:
 
-מצפה ראשית, או בקיצור, [[מיצפרש]] הוא הישוב, [[שאסדת טתיס|ים טתיס]]  הייתה רק תרוץ להקמתו המתבקשת. בצידה המזרחי נמצא [[רובע מרינה|מרינה זוטו]], שהמשכו הוא אזור תעשיה, בו שוכן, בין השאר, הבניין של [[שלום]].</pre>
+מצפה ראשית, או בקיצור, [[מיצפרש]], הוא הישוב, [[שאסדת טתיס|ים טתיס]]  הייתה רק תרוץ להקמתו המתבקשת. בצידה המזרחי נמצא [[רובע מרינה|מרינה זוטו]], שהמשכו הוא אזור תעשיה, בו שוכן, בין השאר, הבניין של [[שלום]].</pre>
 </div>
 <div created="20170223175057546" modified="20170417151442577" title="מקלדת">
 <pre>[img[pictures/mikledet.jpg]]
@@ -12156,8 +12156,8 @@ Fapina''
 
 </pre>
 </div>
-<div created="20161024202738061" modified="20170501203327810" title="שלום">
-<pre>[img[pictures/Sa76Qo2ISJlmE3bI.JPG]]
+<div created="20161024202738061" modified="20170503210245304" title="שלום">
+<pre>[img[pictures/shalom.jpg]]
 
 !!![[גורה]]:
 
