פה, איתן, סיפורים אמיתיים, האסיפה הראשונה

--- a/index.html
+++ b/index.html
@@ -265,6 +265,8 @@ Error message and password prompt
 
 <li>אנט ג'מיימה</li>
 
+<li>אני הפסיכולוג</li>
+
 <li>אספרגוס</li>
 
 <li>ארוחת כריסמס</li>
@@ -314,6 +316,8 @@ Error message and password prompt
 <li>האחיות כהן</li>
 
 <li>האחיות K</li>
+
+<li>האסיפה הראשונה</li>
 
 <li>הברמנית</li>
 
@@ -439,6 +443,8 @@ Error message and password prompt
 
 <li>סטלין</li>
 
+<li>סיפורים אמיתיים</li>
+
 <li>סלט חסה</li>
 
 <li>סלט מלפפונים עם בצל סגול ושמיר</li>
@@ -552,6 +558,8 @@ Error message and password prompt
 <li>English</li>
 
 <li>HH</li>
+
+<li>imagine</li>
 
 <li>MyStyles</li>
 
@@ -8365,7 +8373,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אני הפסיכולוג]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8385,7 +8393,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170503215820469" title="$:/temp/search">
+<div created="20161023184814872" modified="20170505140234680" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8805,6 +8813,33 @@ Error message and password prompt
 
 </pre>
 </div>
+<div created="20170504193536477" modified="20170505151128757" tags="[[סיפורים אמיתיים]]" title="אני הפסיכולוג">
+<pre>[img[pictures/eytan-sheli.jpg]]
+
+!!![[פיליפ]]:
+
+יש לי שני בנים, מקס ואיתן.
+
+מקס  בן 27, והוא ילד מהספרים. הוא עושה תואר שני בגנטיקה, הוא נפרד לאחרונה מחברה אותה הכיר אחרי שאמו נפטרה.(הוא היה בן עשרים אז). הוא מבלה ועושה חיים ואוהב את אבא שלו.
+
+איתן פחות אוהב את אבא. 
+
+איתן הוא ילד שנולד עם העיניים הרגישות של אימא שלו.
+
+הוא בן 25, סופר כשרוני, מנגן, שר, כותב, משחק ורוקד נפלא. הוא גיי והוא כל הזמן כועס עלי.
+
+כל הזמן.
+
+הוא זוכר לי לרעה את התקופה שהמצב בין ריטה, אשתי המנוחה, וביני היה בכי רע.
+
+זה היה כשהוא היה בן כמעט 17, וזמן קצר אחר- כך, נתגלה שלריטה סרטן קטלני, ותוך ששה חודשים היא הלכה לעולמה.
+
+הוא חושב שאני זה שגרם לריטה לחלות. אני לא יודע איך הוא מבלה את זמנו הפנוי. אני מממן אותו.  הוא גר למטה בעיר, ולמרות שהוא מאד אוהב את אווה, קשה לי מאד להביא אותו אלי, ואני דואג לו,  
+
+
+
+</pre>
+</div>
 <div created="20170407125610504" modified="20170412203453076" tags="[[מתכוני ארוחת הכריסמס]]" title="אספרגוס">
 <pre>[img[pictures/asparagus.jpg]]
 
@@ -8867,7 +8902,7 @@ Error message and password prompt
 
 נאדיה היא אשת עסקים מזן ה-K. היא נראית מבוגרת, ומתלבשת מבוגר וחום (פוליאסטר וטרילין), מתהדרת ביושר, בידע והבנת העולם. נשואה ובוגדנית.</pre>
 </div>
-<div created="20170425194155286" modified="20170501200827163" title="בחוות החיות">
+<div created="20170425194155286" modified="20170504193450166" title="בחוות החיות">
 <pre>[img[pictures/bechavat-hachayot.jpg]]
 
 
@@ -9105,7 +9140,7 @@ Error message and password prompt
 
 אני אומנם מטופלת מכל הכוונים, אבל רק לאחרונה, אחרי [[שדןדן נסע|דןדן נסע]], יויו צילם אותי בוידאו משתוללת על אלפרד, וזה נראה פויה. ממש מביך.</pre>
 </div>
-<div created="20161116210610208" modified="20170417214855707" tags="[[אחות כהן]]" title="דןדן">
+<div created="20161116210610208" modified="20170505125953934" tags="[[אחות כהן]]" title="דןדן">
 <pre>[img[pictures/dandan.jpg]]
 
 !!![[דןדן]]:
@@ -9114,9 +9149,9 @@ Error message and password prompt
 אני אוהב להכניס למגירה של מכונת הכביסה את אבקת הכביסה בתא השמאלי, ובתא האמצעי את המרכך. לסגור את המגירה תוך כדי שאני מכוון את התכנית בטאץ', ושומע את המכונה מתחילה לפעול. אני אוהב את הימים בהם אני מתעורר בקלות ויוצא עם אירי להליכת הבוקר שלה. אני אוהב לשבת עם אלפרד על מדרגות המונמרטרה לפנות בוקר ולעשן ג'ויינט. אני אוהב שז'נבייב מחבקת אותי לשלום כשאנחנו מסיימים יום עבודה, ואומרת לי שאני נהדר ושהיא אוהבת אותי. 
 עד שהכרתי את יויו וחבורתו לא היו לי חברים ממש. רוב חיי זזתי ממקום למקום, ובגיל העשרה הייתי דילר בניו יורק. בחלק מהמקומות בהם גרתי היו לי חברים, אך לא שמרתי על קשר עם אף אחד מהם. אני מסוגל לשכב שעות בלי לזוז. אני יודע להקשיב לדיבורים. אבא שלי היה יכול לדבר שעות בלי להפסיק.
 
-לפעמים אני מתגעגע לדודי מו ולאימא, אבל זה לא שאני באמת צריך לראות אותם. לפעמים אני חושב על אבא ומתגעגע אליו. אני אוהב להיות לבד בחגים. אני אוהב לשוטט בערים המקושטות כשהן ריקות ורק הבודדים מסתובבים ברחובות, לקנות לעצמי איזו ארוחה במכולת כלשהי, ללכת הבייתה ולעשות מקלחת ארוכה וחמה. לשכב מול הטלוויזיה, ולהעביר ערוצים.
+לפעמים אני מתגעגע לדודי מו ולאימא, אבל זה לא שאני באמת צריך לראות אותם. לפעמים אני חושב על אבא ומתגעגע אליו. אני אוהב להיות לבד בחגים. אני אוהב לשוטט בערים המקושטות כשהן ריקות, ורק הבודדים מסתובבים ברחובות. אני אוהב לקנות לעצמי איזו ארוחה במכולת כלשהי, ללכת הבייתה ולעשות מקלחת ארוכה וחמה. לשכב מול הטלוויזיה, ולהעביר ערוצים.
 
-את יום הולדתי ה 18 חגגתי עם אמי, שהייתה מאושפזת באותה תקופה בסנטוריום בוטיק בקולורדו.  יום הולדתי חל ב בפברואר. היה קפוא. ישבנו בחדרה החם והנעים. הזמנו מיליון מנות של אוכל ממסעדת מזרח רחוק, ואכלנו בתאבון ופטפטנו. אפילו התרופות החזקות שהיא קיבלה לא הצליחו לנטרל לגמרי את השובבות שלה ואת טוב ליבה. היא אמרה לי שהיא רוצה שיהיה לי טוב בחיים.
+את יום הולדתי ה 18 חגגתי עם אמי, שהייתה מאושפזת באותה תקופה בסנטוריום בוטיק בקולורדו.  יום הולדתי חל בפברואר. היה קפוא. ישבנו בחדרה החם והנעים. הזמנו מיליון מנות של אוכל, ממסעדת מזרח רחוק, ואכלנו בתאבון ופטפטנו. אפילו התרופות החזקות שהיא קיבלה לא הצליחו לנטרל לגמרי את השובבות שלה ואת טוב ליבה. היא אמרה לי שהיא רוצה שיהיה לי טוב בחיים.
 
 טוב לי עכשיו בחיים. אני חי עם אנשים שאני אוהב. אנחנו עושים המון דברים. אני מרגיש אהוב ורצוי. אני מפרנס את עצמי ביושר וחושב על זה. ואגב, שמי המלא הרשמי הוא דניאל ג'סי באומן.
 
@@ -9128,13 +9163,13 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170112183255462" modified="20170419212303304" title="דןדן נסע">
+<div created="20170112183255462" modified="20170505125623715" title="דןדן נסע">
 <pre>[img[pictures/dandan-nasa.jpg]]
 
 !!![[אירי]]:
 
 
-ב 27 ביוני בשלוש לפנות בוקר, דוֹדוֹ, אחיה של אמו של דןדן, התקשר, ואמר לו שאמו במצב לא טוב ושמוטב שיבוא מהר ככל האפשר. מצאנו כרטיס של הרגע האחרון ובלילה הוא המריא. הוא שלח לנו מסרון כשנחת. הוא המשיך להתכתב עוד כמה ימים עם גורה וגם אתנו, אבל אחר כך לא שמענו ממנו כמעט שלושה חודשים. 
+ב 27 ביוני בשלוש לפנות בוקר, דוֹדוֹ, אחיה של אמו של [[דןדן]], התקשר, ואמר לו שאמו במצב לא טוב ושמוטב שיבוא מהר ככל האפשר. מצאנו כרטיס של הרגע האחרון ובלילה הוא המריא. הוא שלח לנו מסרון כשנחת. הוא המשיך להתכתב עוד כמה ימים עם גורה וגם אתנו, אבל אחר כך לא שמענו ממנו כמעט שלושה חודשים. 
 
 
 בשבת האחרונה של ספטמבר הגיע מדןדן מייל שיועד לכולנו ואני מעתיקה את כולו לכאן:
@@ -9191,7 +9226,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161111215423587" modified="20170501160136636" title="האחיות כהן">
+<div created="20161111215423587" modified="20170504194719105" title="האחיות כהן">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -9204,7 +9239,7 @@ Error message and password prompt
 
 כדברי פתיחה, אני מעתיק לכאן את הקטע בו אווה מתארת אותי עומד שם ונואם בפני חברי ב[[כוכב המשאלות בעל תשע הצלעות]]:
 
-לפני די הרבה שנים, 13-14 שנים, הייתה לי כזו... תקופה. הייתי סטלן אימים, וללא קשר, תמיד אהבתי להמציא. אחד מהדברים שהמצאתי אז הוא, שאני אישה הונגריה בסיסית, ששמה [[אווה כהן]], ובעצם מבחינתי הייתי אחותם של האחים [[איתן ויואל כהן|איתן וג'ואל כהן]], למרות שבכלל יואל הוא שם אבי ובכלל אין לי אחים כי אם ארבע אחיות, ממש כמו ל[[דוקטור דרק שפרד|https://en.wikipedia.org/wiki/Derek_Shepherd#/media/File:Dr._Derek_Shepherd.jpgD7.AA_.D7.91.D7.A1.D7.93.D7.A8.D7.94]]. הרעיון נשאר אתי והמשיך להתפתח, ועם הזמן החלטתי, שאני רוצה להקים קבוצת יצירה ליוצרים בלתי תלויים זה בזה אך קשורים זה לזה ושמה ''האחיות כהן''. שיתפתי בזה את [[גורה]] אחותי הקטנה והיפה. גורה ואני ישבנו ימים ולילות רבים, ופתחנו את האג'נדה והדמויות, את הקונספט והדרמה. כתבנו [[תשתית לסדרה|HH]] בת שמונה פרקים על האחיות עם אפשרות להמשך.. ולמה אני מספר לכם את זה? כי כשהגעתי לדירה כבר הבנתי שזהו מתקן השיגור של האחיות, ולכן בניתי את [[המעבדה]] בחדר השינה שלי. ועכשיו לדבר עצמו. אני מזמין כל אחד ואחת מכם להצטרף לחבורה. תנאי בסיסי לכניסת מיזם לתחומי האחיות הוא ש-[[שרלה הייתה אוהבת את זה]]. מי זו שרלה? שרלה היא אישה שנפטרה מסרטן במח, כמו ש[[מאיר אריאל]] מספר בסרט [[מסע הבחירות של מאיר אריאל|https://www.youtube.com/watch?v=yFXUEoXCkT8]],  (5:30 דקות מתחילת הסרט), על האישה שנלקחה צעירה והיה לה ראש מאד מעניין והלוואי והיא הייתה המורה לספרות שלו. הוא מספר על צחוקיה המשגעים והחכמים ביותר ועל הצורך שחש לכתוב לה משהו של פרידה ביום השלושים לפטירתה, משהו כמו שיר אהבה למורתו שאף היה מבקש ממנה ציון עליו. ומי מחליט אם שרלה שהלכה לעולמה הייתה [[אוהבת|אהבה]] את זה או לא? הדבר התמים שאני שואף אליו הוא שלעולם לא אצטרך לנהוג [[כפוליטיקאי|פוליטיקאי]] או מי מחברי האחיות, כי אני בטוח שאת זה שרלה לא הייתה אוהבת. 
+לפני די הרבה שנים, 13-14 שנים, הייתה לי כזו... תקופה. הייתי סטלן אימים, וללא קשר, תמיד אהבתי להמציא. אחד מהדברים שהמצאתי אז הוא, שאני אישה הונגריה בסיסית, ששמה [[אווה כהן]], ובעצם מבחינתי הייתי אחותם של האחים [[איתן ויואל כהן|איתן וג'ואל כהן]], למרות שבכלל יואל הוא שם אבי ובכלל אין לי אחים כי אם ארבע אחיות, ממש כמו ל[[דוקטור דרק שפרד|https://en.wikipedia.org/wiki/Derek_Shepherd#/media/File:Dr._Derek_Shepherd.jpgD7.AA_.D7.91.D7.A1.D7.93.D7.A8.D7.94]]. הרעיון נשאר אתי והמשיך להתפתח, ועם הזמן החלטתי, שאני רוצה להקים קבוצת יצירה ליוצרים בלתי תלויים זה בזה אך קשורים זה לזה ושמה ''האחיות כהן''.  אני שיתפתי בזה את [[גורה]] אחותי הקטנה והיפה. גורה ואני [[ישבנו|האסיפה הראשונה]] ימים ולילות רבים, ופתחנו את האג'נדה והדמויות, את הקונספט והדרמה. כתבנו [[תשתית לסדרה|HH]] בת שמונה פרקים על האחיות עם אפשרות להמשך.. ולמה אני מספר לכם את זה? כי כשהגעתי לדירה כבר הבנתי שזהו מתקן השיגור של האחיות, ולכן בניתי את [[המעבדה]] בחדר השינה שלי. ועכשיו לדבר עצמו. אני מזמין כל אחד ואחת מכם להצטרף לחבורה. תנאי בסיסי לכניסת מיזם לתחומי האחיות הוא ש-[[שרלה הייתה אוהבת את זה]]. מי זו שרלה? שרלה היא אישה שנפטרה מסרטן במח, כמו ש[[מאיר אריאל]] מספר בסרט [[מסע הבחירות של מאיר אריאל|https://www.youtube.com/watch?v=yFXUEoXCkT8]],  (5:30 דקות מתחילת הסרט), על האישה שנלקחה צעירה והיה לה ראש מאד מעניין והלוואי והיא הייתה המורה לספרות שלו. הוא מספר על צחוקיה המשגעים והחכמים ביותר ועל הצורך שחש לכתוב לה משהו של פרידה ביום השלושים לפטירתה, משהו כמו שיר אהבה למורתו שאף היה מבקש ממנה ציון עליו. ומי מחליט אם שרלה שהלכה לעולמה הייתה [[אוהבת|אהבה]] את זה או לא? הדבר התמים שאני שואף אליו הוא שלעולם לא אצטרך לנהוג [[כפוליטיקאי|פוליטיקאי]] או מי מחברי האחיות, כי אני בטוח שאת זה שרלה לא הייתה אוהבת. 
 
 או כמו שגורה ואני כתבנו בשעתו, כשגרתי [[בין האלונים|המעבדה]].
 
@@ -9225,6 +9260,27 @@ Error message and password prompt
 !!![[גורה]]:
 
 האחיות כן הן החתולות השורטות ב-[[HAPPY HOUR|HH]].
+</pre>
+</div>
+<div created="20170504162635914" modified="20170505125543421" title="האסיפה הראשונה">
+<pre>[img[pictures/asefot.jpg]]
+
+!!![[פיליפ]]:
+
+הפגישה הראשונה של כולנו, היתה בארוחת הכריסמס המונומנטלית, שהתחוללה בדצמבר 2015, ומאז בעצם אנחנו מתראים כל הזמן. הצעירים ממש עובדים יחד, ואני מגיע או מגיח לארוחות משפחתיות וכיו&quot;ב.
+
+לפני שבוע, (כלומר, למעלה משנה אחרי אותה ארוחה), יויו ביקש מכולנו לבוא, וממש כולם חוץ [[מדןדן|דןדן נסע]] שנסע, היו, כולל איריס, ביתה של אווה אהובתי.
+
+הוא עמד מול כולם, ובדרכו המתנדנדת ביקש [[מפה|פה]] לעמוד קרוב אליו, וסיפר איך לפני יומיים העליב אותו,  כשלא לגמרי הבין את כוונתו של יויו, כשערכו את הפרק הראשון של סדרת הפורנו האינטרנטית שלו.
+
+&quot;זה קרה לפני חמישה ימים, שפגעתי בפה, וזה לא הניח לי מאז. אני ממש מתבייש, כי ממש צעקתי עליו ודיברתי לא יפה. מצד שני, אני רק בנאדם, ובסופו של דבר קראתי לכם, כדי להגיד לכם, שכולנו כואבים וכולנו מכאיבים, וחוץ מהדברים המגניבים כאן בגנזך, אני חושב שאם רוצים באמת להשפיע, אז צריך לספר את [[הסיפורים האמיתיים|סיפורים אמיתיים]] כמו שהם, ושאין מה להתבייש בכלום, אפילו לא בהתקפי הזעם של גורה, ואני מבקש שתכתבו - לא בקטע של מרגש - כי אם בקטע של [[חשוב|imagine]]&quot;.
+
+כשהוא אמר את זה נזכרתי באיתן שלי, בני הצעיר, וכמה קשה לי איתו, אני הפסיכולוג [[הולך יחף]].
+
+
+
+
+
 </pre>
 </div>
 <div created="20161217141221233" modified="20170103181159486" title="הברמנית">
@@ -10968,6 +11024,20 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ''תה שחור, ארבע סוכר, לא לערבב.''</pre>
 </div>
+<div created="20170504194900461" modified="20170505141117760" title="סיפורים אמיתיים">
+<pre>[img[pictures/sipurim-amitiim.jpg]]
+
+!!![[פיליפ]]:
+
+הרמנו את [[הכפפה|האסיפה הראשונה]].
+
+
+:)
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[סיפורים אמיתיים]]&quot;&gt;&gt;</pre>
+</div>
 <div created="20170407131936343" modified="20170412203443275" tags="[[מתכוני ארוחת הכריסמס]]" title="סלט חסה">
 <pre>[img[pictures/salat-chasa.jpg]]
 
@@ -11525,10 +11595,22 @@ __אופן ההכנה____
 
 וכולם נהנים מאד</pre>
 </div>
-<div created="20170324140205427" modified="20170417190916651" tags="[[אחות כהן]]" title="פה">
-<pre>[img[pictures/zYSyawODRSpsQ3mx.jpg]]</pre>
+<div created="20170324140205427" modified="20170505133140413" tags="[[אחות כהן]]" title="פה">
+<pre>[img[pictures/fa.jpg]]
+
+!!![[יויו]]:
+
+פה, הוא, מה שנקרא כאן בגנזך, [[מהסינים|הסינים]].
+
+אביו סיני. הוא הגיע רווק לפריז, וחיש חש הכיר את אמו של פה, שעבדה ועדיין עובדת במרכז הקליטה, כעובדת סוציאלית.
+
+פה הוא חכם, מקסים ונדיב.
+
+יותר מקצרה היריעה מלהכיל מילות התפעמות ממנו ומהחבורה כולה.
+
+הוא מסיים תואר שני במחשבים והוא מלך.</pre>
 </div>
-<div created="20170419212629057" modified="20170425213108365" title="פוליטיקאי">
+<div created="20170419212629057" modified="20170504140039659" title="פוליטיקאי">
 <pre>[img[pictures/politician.jpg]]
 
 
@@ -11536,7 +11618,7 @@ __אופן ההכנה____
 
 נכון לרגע זה, היינו אומרים, שפוליטיקאי הוא:
 
-[[תאב שלטון|סוסים לדבק]]
+[[תאב שלטון|סוסים לדבק]] ו[[משחקי כח|https://www.youtube.com/watch?v=yb2rkbHXtow]].
 
 
 
@@ -11598,14 +11680,14 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20170401151233604" modified="20170422143844387" tags="[[אחות כהן]]" title="פיליפ">
+<div created="20170401151233604" modified="20170505133529340" tags="[[אחות כהן]]" title="פיליפ">
 <pre>[img[pictures/phillip.jpg]]
 
 !!![[גורה]]:
 
 פיליפ שלנו. 
 
-ניסיתי בעיקר להראות את רעמת השיער המפוארת של הדוקטור, שצומחת ממצחו הגבוה בצורת לב, ואת פניו הנהדרים, ואת מבטו החכם והטוב.
+ניסיתי בעיקר להראות את רעמת השיער המפוארת של הדוקטור, שצומחת ממצחו הגבוה בצורת לב, ואת פניו הנהדרים, ואת מבטו החכם והמעמיק.
 
 הוא היה הפסיכיאטר שלי, וכשיויו הגיע לפריז הלכנו אליו יחד.
 
@@ -12398,6 +12480,9 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 בהמשך, תוך כדי פתרון העלילה כבר מתרקמת עלילה עתידית שחלקה סכסוכים בין הדמויות הקבועות, בעיות אישיות מחייהן הפרטיים של אותן דמויות, דמויות נוספות של עוברים ושבים וכו'.
 אורכו של כל פרק כארבעים דקות, ולרוב מסתיים ב HAPPY HOUR   מסורתי, שעה של משקאות, [[אנט ג'מיימה]], שמחה וכיופים ב[[&quot;קפה מילר &quot;|קפה מילר]].
 </pre>
+</div>
+<div created="20170504194252766" modified="20170504194319179" title="imagine">
+<pre>[[דמיין|https://www.youtube.com/watch?v=RwUGSYDKUxU]]</pre>
 </div>
 <div created="20161024053448116" modified="20161111214302931" tags="$:/tags/Stylesheet LTR" title="MyStyles" type="text/css">
 <pre>.left { text-align: left }
