אימא של איר ואיתן של פיליפ

--- a/index.html
+++ b/index.html
@@ -243,6 +243,8 @@ Error message and password prompt
 
 <li>אחיות חוץ</li>
 
+<li>אימא שלי</li>
+
 <li>אימא, סבתא ואני</li>
 
 <li>אירי</li>
@@ -8373,7 +8375,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אני הפסיכולוג]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="פה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8393,7 +8395,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170505140234680" title="$:/temp/search">
+<div created="20161023184814872" modified="20170505172327064" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8651,6 +8653,20 @@ Error message and password prompt
 &lt;&lt;list-links filter:&quot;[tag[אחיות חוץ]]&quot;&gt;&gt;
 </pre>
 </div>
+<div created="20170505164125282" modified="20170505173928267" tags="[[סיפורים אמיתיים]]" title="אימא שלי">
+<pre>[img[pictures/ima-sheli-iri.jpg]]
+
+!!![[אירי]]:
+
+באפריל אמי הגיעה לכמה ימים, ואחד הדברים שסיפרה לי הוא, ששנתיים לפני שנולדתי, לאחר שמונה חודשי הריון, היא ילדה ולד מת. לאורך כל השנים אמי תהתה בינה לבינה, וגם בינה לבין אבי, אם לספר לי או לא, אך שניהם לא הצליחו מעולם לעשות את זה, וכעת לאחר הפרידה מאבי, החלה ללכת שוב לטיפול, ואחד מהדברים שנתבקשה מהמטפלת שלה הוא, לספר לי על כך, שהיא ואבא אהבו מאד זה את זה כשנפגשו והכירו. היא אמרה, שלאחר המקרה, רוחה נפלה, ובנקודת הזמן ההיא, היא חושבת, שהחל להתפתח מרחק בינה ובין אבי. 
+
+ויש לי דבר אחד להגיד על זה
+
+קשה לי בשלב הזה של החיים לחשוב על יחסים.
+
+
+</pre>
+</div>
 <div created="20170301155222124" modified="20170301155811140" title="אימא, סבתא ואני">
 <pre>[img[pictures/PrYBW9yDkBFFqCB6.jpg]]
 
@@ -8813,7 +8829,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170504193536477" modified="20170505151128757" tags="[[סיפורים אמיתיים]]" title="אני הפסיכולוג">
+<div created="20170504193536477" modified="20170505174208305" tags="[[סיפורים אמיתיים]]" title="אני הפסיכולוג">
 <pre>[img[pictures/eytan-sheli.jpg]]
 
 !!![[פיליפ]]:
@@ -8832,9 +8848,9 @@ Error message and password prompt
 
 הוא זוכר לי לרעה את התקופה שהמצב בין ריטה, אשתי המנוחה, וביני היה בכי רע.
 
-זה היה כשהוא היה בן כמעט 17, וזמן קצר אחר- כך, נתגלה שלריטה סרטן קטלני, ותוך ששה חודשים היא הלכה לעולמה.
+זה היה כשהוא היה בן כמעט 17. זמן קצר אחר- כך, נתגלה שלריטה יש סרטן קטלני, וששה חודשים אחר-כך היא נפטרה.
 
-הוא חושב שאני זה שגרם לריטה לחלות. אני לא יודע איך הוא מבלה את זמנו הפנוי. אני מממן אותו.  הוא גר למטה בעיר, ולמרות שהוא מאד אוהב את אווה, קשה לי מאד להביא אותו אלי, ואני דואג לו,  
+הוא חושב שריטה חלתה בגללי. אני לא יודע איך הוא מבלה את זמנו הפנוי. אני מממן אותו.  הוא גר למטה בעיר, ולמרות שהוא מאד אוהב את אווה, קשה לי מאד להביא אותו אלי, ואני דואג לו,  
 
 
 
@@ -11024,7 +11040,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ''תה שחור, ארבע סוכר, לא לערבב.''</pre>
 </div>
-<div created="20170504194900461" modified="20170505141117760" title="סיפורים אמיתיים">
+<div created="20170504194900461" modified="20170505173710120" title="סיפורים אמיתיים">
 <pre>[img[pictures/sipurim-amitiim.jpg]]
 
 !!![[פיליפ]]:
@@ -11032,7 +11048,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 הרמנו את [[הכפפה|האסיפה הראשונה]].
 
 
-:)
+[[:)|https://www.youtube.com/watch?v=Zu7UolUTh7s]]
 
 
 
@@ -11595,14 +11611,14 @@ __אופן ההכנה____
 
 וכולם נהנים מאד</pre>
 </div>
-<div created="20170324140205427" modified="20170505133140413" tags="[[אחות כהן]]" title="פה">
+<div created="20170324140205427" modified="20170505174327163" tags="[[אחות כהן]]" title="פה">
 <pre>[img[pictures/fa.jpg]]
 
 !!![[יויו]]:
 
 פה, הוא, מה שנקרא כאן בגנזך, [[מהסינים|הסינים]].
 
-אביו סיני. הוא הגיע רווק לפריז, וחיש חש הכיר את אמו של פה, שעבדה ועדיין עובדת במרכז הקליטה, כעובדת סוציאלית.
+אביו סיני. הוא הגיע רווק לפריז, וחיש חש הכיר את אמו, שעבדה ועדיין עובדת במרכז הקליטה, כעובדת סוציאלית.
 
 פה הוא חכם, מקסים ונדיב.
 
@@ -12481,8 +12497,10 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 אורכו של כל פרק כארבעים דקות, ולרוב מסתיים ב HAPPY HOUR   מסורתי, שעה של משקאות, [[אנט ג'מיימה]], שמחה וכיופים ב[[&quot;קפה מילר &quot;|קפה מילר]].
 </pre>
 </div>
-<div created="20170504194252766" modified="20170504194319179" title="imagine">
-<pre>[[דמיין|https://www.youtube.com/watch?v=RwUGSYDKUxU]]</pre>
+<div created="20170504194252766" modified="20170505161130429" title="imagine">
+<pre>[img[pictures/imagine.jpg]]
+
+[[you may say i'm a dreamer|https://www.youtube.com/watch?v=RwUGSYDKUxU]]</pre>
 </div>
 <div created="20161024053448116" modified="20161111214302931" tags="$:/tags/Stylesheet LTR" title="MyStyles" type="text/css">
 <pre>.left { text-align: left }
