--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ Error message and password prompt
 
 <li>אנט ג'מיימה</li>
 
-<li>אני הפסיכולוג</li>
+<li>אני הפסיכיאטר</li>
 
 <li>אספרגוס</li>
 
@@ -8375,7 +8375,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="פה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האסיפה הראשונה]] [[סיפורים אמיתיים]] [[אימא שלי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8653,12 +8653,12 @@ Error message and password prompt
 &lt;&lt;list-links filter:&quot;[tag[אחיות חוץ]]&quot;&gt;&gt;
 </pre>
 </div>
-<div created="20170505164125282" modified="20170505173928267" tags="[[סיפורים אמיתיים]]" title="אימא שלי">
+<div created="20170505164125282" modified="20170505175818962" tags="[[סיפורים אמיתיים]]" title="אימא שלי">
 <pre>[img[pictures/ima-sheli-iri.jpg]]
 
 !!![[אירי]]:
 
-באפריל אמי הגיעה לכמה ימים, ואחד הדברים שסיפרה לי הוא, ששנתיים לפני שנולדתי, לאחר שמונה חודשי הריון, היא ילדה ולד מת. לאורך כל השנים אמי תהתה בינה לבינה, וגם בינה לבין אבי, אם לספר לי או לא, אך שניהם לא הצליחו מעולם לעשות את זה, וכעת לאחר הפרידה מאבי, החלה ללכת שוב לטיפול, ואחד מהדברים שנתבקשה מהמטפלת שלה הוא, לספר לי על כך, שהיא ואבא אהבו מאד זה את זה כשנפגשו והכירו. היא אמרה, שלאחר המקרה, רוחה נפלה, ובנקודת הזמן ההיא, היא חושבת, שהחל להתפתח מרחק בינה ובין אבי. 
+באפריל אמי הגיעה אלי לביקור, ואחד מהדברים שהיא סיפרה לי הוא, ששנתיים לפני שנולדתי, לאחר שמונה חודשי הריון, היא ילדה ולד מת. לאורך כל השנים אמי תהתה בינה לבינה, וגם בינה לבין אבי, אם לספר לי או לא, אך שניהם לא הצליחו מעולם לעשות את זה, וכעת לאחר הפרידה מאבי, החלה ללכת שוב לטיפול, ואחד מהדברים שנתבקשה מהמטפלת שלה הוא, לספר לי על כך, שהיא ואבא אהבו מאד זה את זה כשנפגשו והכירו. היא אמרה, שלאחר המקרה, רוחה נפלה, ובנקודת הזמן ההיא, היא חושבת, שהחל להתפתח מרחק בינה ובין אבי. 
 
 ויש לי דבר אחד להגיד על זה
 
@@ -8829,7 +8829,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170504193536477" modified="20170505174208305" tags="[[סיפורים אמיתיים]]" title="אני הפסיכולוג">
+<div created="20170504193536477" modified="20170505175207003" tags="[[סיפורים אמיתיים]]" title="אני הפסיכיאטר">
 <pre>[img[pictures/eytan-sheli.jpg]]
 
 !!![[פיליפ]]:
@@ -8850,7 +8850,7 @@ Error message and password prompt
 
 זה היה כשהוא היה בן כמעט 17. זמן קצר אחר- כך, נתגלה שלריטה יש סרטן קטלני, וששה חודשים אחר-כך היא נפטרה.
 
-הוא חושב שריטה חלתה בגללי. אני לא יודע איך הוא מבלה את זמנו הפנוי. אני מממן אותו.  הוא גר למטה בעיר, ולמרות שהוא מאד אוהב את אווה, קשה לי מאד להביא אותו אלי, ואני דואג לו,  
+הוא חושב שריטה חלתה בגללי. אני לא יודע איך הוא מבלה את זמנו הפנוי. אני מממן אותו.  הוא גר למטה בעיר, ולמרות שהוא מאד אוהב את אווה, קשה לי מאד להביא אותו אלי, ואני דואג לו. 
 
 
 
@@ -9278,20 +9278,20 @@ Error message and password prompt
 האחיות כן הן החתולות השורטות ב-[[HAPPY HOUR|HH]].
 </pre>
 </div>
-<div created="20170504162635914" modified="20170505125543421" title="האסיפה הראשונה">
+<div created="20170504162635914" modified="20170505175516475" title="האסיפה הראשונה">
 <pre>[img[pictures/asefot.jpg]]
 
 !!![[פיליפ]]:
 
 הפגישה הראשונה של כולנו, היתה בארוחת הכריסמס המונומנטלית, שהתחוללה בדצמבר 2015, ומאז בעצם אנחנו מתראים כל הזמן. הצעירים ממש עובדים יחד, ואני מגיע או מגיח לארוחות משפחתיות וכיו&quot;ב.
 
-לפני שבוע, (כלומר, למעלה משנה אחרי אותה ארוחה), יויו ביקש מכולנו לבוא, וממש כולם חוץ [[מדןדן|דןדן נסע]] שנסע, היו, כולל איריס, ביתה של אווה אהובתי.
+לפני שבוע, (כלומר, למעלה משנה אחרי אותה ארוחה), זו הייתה הפעם הראשונה מאז, שיויו ביקש מכולנו לבוא, וממש כולם חוץ [[מדןדן|דןדן נסע]] שנסע, היו, כולל איריס, ביתה של אווה אהובתי.
 
-הוא עמד מול כולם, ובדרכו המתנדנדת ביקש [[מפה|פה]] לעמוד קרוב אליו, וסיפר איך לפני יומיים העליב אותו,  כשלא לגמרי הבין את כוונתו של יויו, כשערכו את הפרק הראשון של סדרת הפורנו האינטרנטית שלו.
+יויו עמד מול כולם, ובדרכו המתנדנדת ביקש [[מפה|פה]] לעמוד קרוב אליו, וסיפר איך לפני יומיים העליב אותו,  כשלא לגמרי הבין את כוונתו של יויו, כשערכו את הפרק הראשון של סדרת הפורנו האינטרנטית שלו.
 
-&quot;זה קרה לפני חמישה ימים, שפגעתי בפה, וזה לא הניח לי מאז. אני ממש מתבייש, כי ממש צעקתי עליו ודיברתי לא יפה. מצד שני, אני רק בנאדם, ובסופו של דבר קראתי לכם, כדי להגיד לכם, שכולנו כואבים וכולנו מכאיבים, וחוץ מהדברים המגניבים כאן בגנזך, אני חושב שאם רוצים באמת להשפיע, אז צריך לספר את [[הסיפורים האמיתיים|סיפורים אמיתיים]] כמו שהם, ושאין מה להתבייש בכלום, אפילו לא בהתקפי הזעם של גורה, ואני מבקש שתכתבו - לא בקטע של מרגש - כי אם בקטע של [[חשוב|imagine]]&quot;.
+&quot;זה קרה לפני חמישה ימים, שפגעתי בפה, וזה לא הניח לי מאז. אני ממש מתבייש, כי ממש צעקתי עליו ודיברתי לא יפה. מצד שני, אני רק בנאדם, ובסופו של דבר קראתי לכם, כדי להגיד לכם, שכולנו כואבים וכולנו מכאיבים, וחוץ מהדברים המגניבים כאן בגנזך, אני חושב שאם רוצים באמת להשפיע, אז צריך לספר את [[הסיפורים האמיתיים|סיפורים אמיתיים]] כמו שהם, ושאין מה להתבייש בכלום, אפילו לא בהתקפי הזעם של גורה, ואני מבקש שתכתבו - לא בקטע של מרגש - כי אם בקטע של [[חשוב|imagine]].
 
-כשהוא אמר את זה נזכרתי באיתן שלי, בני הצעיר, וכמה קשה לי איתו, אני הפסיכולוג [[הולך יחף]].
+כשהוא אמר את זה נזכרתי באיתן שלי, בני הצעיר, וכמה קשה לי איתו, אני הפסיכיאטר, [[הולך יחף|אני הפסיכיאטר]].
 
 
 
