--- a/index.html
+++ b/index.html
@@ -323,6 +323,8 @@ Error message and password prompt
 
 <li>הברמנית</li>
 
+<li>הדוד האמיתי</li>
+
 <li>הדירה</li>
 
 <li>ההוסטל</li>
@@ -8375,7 +8377,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האסיפה הראשונה]] [[סיפורים אמיתיים]] [[אימא שלי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[הדוד האמיתי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9242,7 +9244,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161111215423587" modified="20170504194719105" title="האחיות כהן">
+<div created="20161111215423587" modified="20170505223828219" title="האחיות כהן">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -9278,7 +9280,7 @@ Error message and password prompt
 האחיות כן הן החתולות השורטות ב-[[HAPPY HOUR|HH]].
 </pre>
 </div>
-<div created="20170504162635914" modified="20170505175516475" title="האסיפה הראשונה">
+<div created="20170504162635914" modified="20170505224135529" title="האסיפה הראשונה">
 <pre>[img[pictures/asefot.jpg]]
 
 !!![[פיליפ]]:
@@ -9289,7 +9291,7 @@ Error message and password prompt
 
 יויו עמד מול כולם, ובדרכו המתנדנדת ביקש [[מפה|פה]] לעמוד קרוב אליו, וסיפר איך לפני יומיים העליב אותו,  כשלא לגמרי הבין את כוונתו של יויו, כשערכו את הפרק הראשון של סדרת הפורנו האינטרנטית שלו.
 
-&quot;זה קרה לפני חמישה ימים, שפגעתי בפה, וזה לא הניח לי מאז. אני ממש מתבייש, כי ממש צעקתי עליו ודיברתי לא יפה. מצד שני, אני רק בנאדם, ובסופו של דבר קראתי לכם, כדי להגיד לכם, שכולנו כואבים וכולנו מכאיבים, וחוץ מהדברים המגניבים כאן בגנזך, אני חושב שאם רוצים באמת להשפיע, אז צריך לספר את [[הסיפורים האמיתיים|סיפורים אמיתיים]] כמו שהם, ושאין מה להתבייש בכלום, אפילו לא בהתקפי הזעם של גורה, ואני מבקש שתכתבו - לא בקטע של מרגש - כי אם בקטע של [[חשוב|imagine]].
+&quot;זה קרה לפני חמישה ימים, שפגעתי בפה, וזה לא הניח לי מאז. אני ממש מתבייש, כי ממש צעקתי עליו ודיברתי לא יפה. מצד שני, אני רק בנאדם, ובסופו של דבר קראתי לכם, כדי להגיד לכם, שכולנו כואבים וכולנו מכאיבים, וחוץ מהדברים המגניבים כאן בגנזך, אני חושב שאם רוצים באמת להשפיע, אז צריך לספר את [[הסיפורים האמיתיים|סיפורים אמיתיים]] כמו שהם, ושאין מה להתבייש בכלום, אפילו לא בהתקפי הזעם של גורה, ואני מבקש שתכתבו - לא בקטע של מרגש - כי אם בקטע של [[חשוב|imagine]], ותודה [[לדוד האמיתי|הדוד האמיתי]].
 
 כשהוא אמר את זה נזכרתי באיתן שלי, בני הצעיר, וכמה קשה לי איתו, אני הפסיכיאטר, [[הולך יחף|אני הפסיכיאטר]].
 
@@ -9307,6 +9309,13 @@ Error message and password prompt
 תחביבים: [[שואה]], כדורגל, פתרונות סופיים, וכלי רכב בכלל עם עדיפות לארבע על ארבע.
 
 בעלת טנדר פורד ירוק וישן. (מכונה הקטנה)</pre>
+</div>
+<div created="20170505224151892" modified="20170505230126837" tags="[[אחיות חוץ]]" title="הדוד האמיתי">
+<pre>[img[pictures/hadod-haamiti.jpg]]
+
+!!![[יויו]]:
+
+כשהדוד הגיע אלינו, די מהר, [[הכל התחיל להסתדר במקום|https://thedod.github.io/]].</pre>
 </div>
 <div created="20161112194346716" modified="20170417222446869" title="הדירה">
 <pre>!!![[הסקיצה ראשונית של יויו לדירה הריקה]]
